Add Linux to course schedule
Signed-off-by: Vineel Kovvuri <vineel.kovvuri@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
 <p><a href="https://github.com/yihui/hugo-xmin"><img src="./Profile.jpg" style="max-width:15%;min-width:40px;float:right;" alt="Github repo" /></a></p>
 <h1 id="vineel-kovvuri">VINEEL KOVVURI</h1>
-<p><strong>Hi!</strong> I&rsquo;m <strong>Vineel Kovvuri</strong>, currently working as a Senior Software Engineer at <strong>Microsoft</strong> in Redmond, Washington. With around 13 years of experience, I graduated from <strong>IIIT Hyderabad</strong>. I love teaching, hence I&rsquo;ve created this blog to share that passion at no cost :)</p>
+<p><strong>Hi!</strong> I&rsquo;m <strong>Vineel Kovvuri</strong>, currently working as a Senior Software Engineer at <strong>Microsoft</strong> in Redmond, Washington. With around 13 years of experience, I graduated from <strong>IIIT Hyderabad</strong>. I love teaching, hence I&rsquo;ve created this website to share that passion at no cost :)</p>
 <table>
 <thead>
 <tr>
@@ -58,6 +58,12 @@
 <td></td>
 <td></td>
 <td><a href="https://meet.google.com/ibo-ckah-mrm">https://meet.google.com/ibo-ckah-mrm</a></td>
+</tr>
+<tr>
+<td><strong>Linux</strong></td>
+<td></td>
+<td></td>
+<td><a href="https://meet.google.com/gaz-ysbf-fen">https://meet.google.com/gaz-ysbf-fen</a></td>
 </tr>
 </tbody>
 </table>
