--- a/public/courses/c/index.html
+++ b/public/courses/c/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PCI Express Basics 101 | Vineel Kovvuri</title>
+    <title>C Language Course Structure | Vineel Kovvuri</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css" rel="stylesheet">
@@ -23,75 +23,37 @@
     </nav>
 
 <div class="article-meta">
-<h1><span class="title">PCI Express Basics 101</span></h1>
+<h1><span class="title">C Language Course Structure</span></h1>
 
-<h2 class="date">2018/12/10</h2>
+
 </div>
 
 <main>
-<h1 id="introduction">Introduction</h1>
-<p>PCI Express: It is a standard which comes in multiple generations and multiple
-lane configurations. PCI-E is in its 5th generation, but mostly the current
-shipping generation is 3rd generation also called as Gen 3. Mainly each
-generation improves upon the previous generation regarding the speed per lane
-supported by the protocol.</p>
-<p>Below is the table for each generation and lane speed
-For single-lane and 16-lane links, in each direction:</p>
-<table>
-<thead>
-<tr>
-<th>Generation</th>
-<th>x1</th>
-<th>x16</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Gen 1</td>
-<td>250 MB/s</td>
-<td>4 GB/s</td>
-</tr>
-<tr>
-<td>Gen 2</td>
-<td>500 MB/s</td>
-<td>8 GB/s</td>
-</tr>
-<tr>
-<td>Gen 3</td>
-<td>985 MB/s</td>
-<td>15.75 GB/s</td>
-</tr>
-<tr>
-<td>Gen 4</td>
-<td>1.969 GB/s</td>
-<td>31.51 GB/s</td>
-</tr>
-<tr>
-<td>Gen 5</td>
-<td>3.938 GB/s</td>
-<td>63 GB/s</td>
-</tr>
-</tbody>
-</table>
-<p>There are PCIE connectors in x1, x2, x4, x8, x16 configurations. The
-specification also makes sure in an x16 physical connector we can plugin in any
-card with x1, x2, x4, x8, x16. One important fact about physical connectors is,
-x16 physical may not be powering all the 16 lanes so for example in a
-motherboard if an x16 connector is fueling only x4 lanes, it means, The
-connector is limited to x4 speeds.</p>
-<p><img src="350px-PCIExpress.png" alt=""></p>
-<p>Different type of physical PCIE connectors</p>
-<p>Now to understand each connectors capability we need to refer the motherboard
-manual. They explicitly talk about the supported connectors and their
-configuration for the CPU maximum supported lane count. After all CPU max
-supported PCI-E lane count is what matters and how the motherboard takes
-advantage of these lanes.</p>
-<p><img src="Motherboard-Manual.png" alt="">
-Gigabyte Motherboard manual description of on board PCIE connectors and their
-configurations</p>
-<h1 id="references">References</h1>
+<h1 id="c">C</h1>
 <ul>
-<li><a href="https://computer.howstuffworks.com/pci-express.htm">How PCI Express Works</a></li>
+<li>Some Fundamentals</li>
+<li>Compiling And Running Your First Program</li>
+<li>Variables, Data Types, And Arithmetic Expressions</li>
+<li>Program Looping</li>
+<li>Making Decisions</li>
+<li>Working With Arrays</li>
+<li>Working With Functions</li>
+<li>Working With Structures</li>
+<li>Character Strings</li>
+<li>Pointers</li>
+<li>Operations On Bits</li>
+<li>The Preprocessor</li>
+<li>Extending Data Types With The Enumerated Data Type, Type Definitions, And Data Type Conversions</li>
+<li>Working With Larger Programs</li>
+<li>Input And Output Operations In C</li>
+<li>Miscellaneous And Advanced Features</li>
+<li>Debugging Programs</li>
+<li>Object-Oriented Programming</li>
+<li>The Standard C Library</li>
+</ul>
+<h1 id="resources">Resources</h1>
+<ul>
+<li><a href="https://goalkicker.com/CBook/">C Programming Notes for Professionals</a></li>
 </ul>
 
 </main>
