--- a/public/courses/linux/index.html
+++ b/public/courses/linux/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PCI Express Basics 101 | Vineel Kovvuri</title>
+    <title>Linux Course Structure | Vineel Kovvuri</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css" rel="stylesheet">
@@ -23,75 +23,63 @@
     </nav>
 
 <div class="article-meta">
-<h1><span class="title">PCI Express Basics 101</span></h1>
+<h1><span class="title">Linux Course Structure</span></h1>
 
-<h2 class="date">2018/12/10</h2>
+
 </div>
 
 <main>
-<h1 id="introduction">Introduction</h1>
-<p>PCI Express: It is a standard which comes in multiple generations and multiple
-lane configurations. PCI-E is in its 5th generation, but mostly the current
-shipping generation is 3rd generation also called as Gen 3. Mainly each
-generation improves upon the previous generation regarding the speed per lane
-supported by the protocol.</p>
-<p>Below is the table for each generation and lane speed
-For single-lane and 16-lane links, in each direction:</p>
-<table>
-<thead>
-<tr>
-<th>Generation</th>
-<th>x1</th>
-<th>x16</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Gen 1</td>
-<td>250 MB/s</td>
-<td>4 GB/s</td>
-</tr>
-<tr>
-<td>Gen 2</td>
-<td>500 MB/s</td>
-<td>8 GB/s</td>
-</tr>
-<tr>
-<td>Gen 3</td>
-<td>985 MB/s</td>
-<td>15.75 GB/s</td>
-</tr>
-<tr>
-<td>Gen 4</td>
-<td>1.969 GB/s</td>
-<td>31.51 GB/s</td>
-</tr>
-<tr>
-<td>Gen 5</td>
-<td>3.938 GB/s</td>
-<td>63 GB/s</td>
-</tr>
-</tbody>
-</table>
-<p>There are PCIE connectors in x1, x2, x4, x8, x16 configurations. The
-specification also makes sure in an x16 physical connector we can plugin in any
-card with x1, x2, x4, x8, x16. One important fact about physical connectors is,
-x16 physical may not be powering all the 16 lanes so for example in a
-motherboard if an x16 connector is fueling only x4 lanes, it means, The
-connector is limited to x4 speeds.</p>
-<p><img src="350px-PCIExpress.png" alt=""></p>
-<p>Different type of physical PCIE connectors</p>
-<p>Now to understand each connectors capability we need to refer the motherboard
-manual. They explicitly talk about the supported connectors and their
-configuration for the CPU maximum supported lane count. After all CPU max
-supported PCI-E lane count is what matters and how the motherboard takes
-advantage of these lanes.</p>
-<p><img src="Motherboard-Manual.png" alt="">
-Gigabyte Motherboard manual description of on board PCIE connectors and their
-configurations</p>
-<h1 id="references">References</h1>
+<h1 id="linux">Linux</h1>
+<h2 id="learning-the-shell">Learning The Shell</h2>
 <ul>
-<li><a href="https://computer.howstuffworks.com/pci-express.htm">How PCI Express Works</a></li>
+<li>What Is The Shell</li>
+<li>Navigation</li>
+<li>Exploring The System</li>
+<li>Manipulating Files And Directories</li>
+<li>Working With Commands</li>
+<li>Redirection</li>
+<li>Seeing The World As The Shell Sees It</li>
+<li>Advanced Keyboard Tricks</li>
+<li>Permissions</li>
+<li>Processes</li>
+</ul>
+<h2 id="configuration-and-the-environment">Configuration And The Environment</h2>
+<ul>
+<li>The Environment</li>
+<li>A Gentle Introduction To Vi</li>
+<li>Customizing The Prompt</li>
+</ul>
+<h2 id="common-tasks-and-essential-tools">Common Tasks And Essential Tools</h2>
+<ul>
+<li>Package Management</li>
+<li>Storage Media</li>
+<li>Networking</li>
+<li>Searching For Files</li>
+<li>Archiving And Backup</li>
+<li>Regular Expressions</li>
+<li>Text Processing</li>
+<li>Formatting Output</li>
+<li>Printing</li>
+<li>Compiling Programs</li>
+</ul>
+<h2 id="writing-shell-scripts">Writing Shell Scripts</h2>
+<ul>
+<li>Writing Your First Script</li>
+<li>Starting A Project</li>
+<li>Top Down Design</li>
+<li>Flow Control Branching With If</li>
+<li>Reading Keyboard Input</li>
+<li>Flow Control Looping With While Until</li>
+<li>Troubleshooting</li>
+<li>Flow Control Branching With Case</li>
+<li>Positional Parameters</li>
+<li>Flow Control Looping With For</li>
+<li>Strings And Numbers</li>
+<li>Arrays</li>
+</ul>
+<h1 id="resources">Resources</h1>
+<ul>
+<li><a href="https://goalkicker.com/LinuxBook/">Linux Commands Notes for Professionals</a></li>
 </ul>
 
 </main>
