--- a/public/courses/python/index.html
+++ b/public/courses/python/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PCI Express Basics 101 | Vineel Kovvuri</title>
+    <title>Python Course Structure | Vineel Kovvuri</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
     <link href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github.min.css" rel="stylesheet">
@@ -23,75 +23,78 @@
     </nav>
 
 <div class="article-meta">
-<h1><span class="title">PCI Express Basics 101</span></h1>
+<h1><span class="title">Python Course Structure</span></h1>
 
-<h2 class="date">2018/12/10</h2>
+
 </div>
 
 <main>
-<h1 id="introduction">Introduction</h1>
-<p>PCI Express: It is a standard which comes in multiple generations and multiple
-lane configurations. PCI-E is in its 5th generation, but mostly the current
-shipping generation is 3rd generation also called as Gen 3. Mainly each
-generation improves upon the previous generation regarding the speed per lane
-supported by the protocol.</p>
-<p>Below is the table for each generation and lane speed
-For single-lane and 16-lane links, in each direction:</p>
-<table>
-<thead>
-<tr>
-<th>Generation</th>
-<th>x1</th>
-<th>x16</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>Gen 1</td>
-<td>250 MB/s</td>
-<td>4 GB/s</td>
-</tr>
-<tr>
-<td>Gen 2</td>
-<td>500 MB/s</td>
-<td>8 GB/s</td>
-</tr>
-<tr>
-<td>Gen 3</td>
-<td>985 MB/s</td>
-<td>15.75 GB/s</td>
-</tr>
-<tr>
-<td>Gen 4</td>
-<td>1.969 GB/s</td>
-<td>31.51 GB/s</td>
-</tr>
-<tr>
-<td>Gen 5</td>
-<td>3.938 GB/s</td>
-<td>63 GB/s</td>
-</tr>
-</tbody>
-</table>
-<p>There are PCIE connectors in x1, x2, x4, x8, x16 configurations. The
-specification also makes sure in an x16 physical connector we can plugin in any
-card with x1, x2, x4, x8, x16. One important fact about physical connectors is,
-x16 physical may not be powering all the 16 lanes so for example in a
-motherboard if an x16 connector is fueling only x4 lanes, it means, The
-connector is limited to x4 speeds.</p>
-<p><img src="350px-PCIExpress.png" alt=""></p>
-<p>Different type of physical PCIE connectors</p>
-<p>Now to understand each connectors capability we need to refer the motherboard
-manual. They explicitly talk about the supported connectors and their
-configuration for the CPU maximum supported lane count. After all CPU max
-supported PCI-E lane count is what matters and how the motherboard takes
-advantage of these lanes.</p>
-<p><img src="Motherboard-Manual.png" alt="">
-Gigabyte Motherboard manual description of on board PCIE connectors and their
-configurations</p>
-<h1 id="references">References</h1>
+<h1 id="python">Python</h1>
+<h2 id="getting-started">Getting Started</h2>
 <ul>
-<li><a href="https://computer.howstuffworks.com/pci-express.htm">How PCI Express Works</a></li>
+<li>A Python Q&amp;A Session</li>
+<li>How Python Runs Programs</li>
+<li>How You Run Programs</li>
+</ul>
+<h2 id="types-and-operations">Types And Operations</h2>
+<ul>
+<li>Introducing Python Object Types</li>
+<li>Numeric Types</li>
+<li>The Dynamic Typing Interlude</li>
+<li>String Fundamentals</li>
+<li>Lists And Dictionaries</li>
+<li>Tuples, Files, And Everything Else</li>
+</ul>
+<h2 id="statements-and-syntax">Statements And Syntax</h2>
+<ul>
+<li>Introducing Python Statements</li>
+<li>Assignments, Expressions, And Prints</li>
+<li>If Tests And Syntax Rules</li>
+<li>While And For Loops</li>
+<li>Iterations And Comprehensions</li>
+<li>The Documentation Interlude</li>
+</ul>
+<h2 id="functions-and-generators">Functions And Generators</h2>
+<ul>
+<li>Function Basics</li>
+<li>Scopes</li>
+<li>Arguments</li>
+<li>Advanced Function Topics</li>
+<li>Comprehensions And Generations</li>
+<li>The Benchmarking Interlude</li>
+</ul>
+<h2 id="modules-and-packages">Modules And Packages</h2>
+<ul>
+<li>Modules: The Big Picture</li>
+<li>Module Coding Basics</li>
+<li>Module Packages</li>
+<li>Advanced Module Topics</li>
+</ul>
+<h2 id="classes-and-oop">Classes And OOP</h2>
+<ul>
+<li>OOP: The Big Picture</li>
+<li>Class Coding Basics</li>
+<li>A More Realistic Example</li>
+<li>Class Coding Details</li>
+<li>Operator Overloading</li>
+<li>Designing With Classes</li>
+<li>Advanced Class Topics</li>
+</ul>
+<h2 id="exceptions-and-tools">Exceptions And Tools</h2>
+<ul>
+<li>Exception Basics</li>
+<li>Exception Coding Details</li>
+<li>Exception Objects</li>
+<li>Designing With Exceptions</li>
+</ul>
+<h2 id="advanced-topics">Advanced Topics</h2>
+<ul>
+<li>Unicode And Byte Strings</li>
+<li>Managed Attributes</li>
+</ul>
+<h1 id="resources">Resources</h1>
+<ul>
+<li><a href="https://goalkicker.com/PythonBook/">Python Notes for Professionals</a></li>
 </ul>
 
 </main>
