--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     </nav>
 
 
-<p><a href="https://github.com/yihui/hugo-xmin"><img src="./Profile.jpg" style="max-width:15%;min-width:40px;float:right;" alt="Github repo" /></a></p>
+<p><a href="https://vineelkovvuri.github.com"><img src="./images/profile.jpg" style="max-width:15%;min-width:40px;float:right;" alt="Github repo" /></a></p>
 <h1 id="vineel-kovvuri">VINEEL KOVVURI</h1>
 <p><strong>Hi!</strong> I&rsquo;m <strong>Vineel Kovvuri</strong>, currently working as a Senior Software Engineer at <strong>Microsoft</strong> in Redmond, Washington. With around 13 years of experience, I graduated with a Master&rsquo;s degree from <strong>IIIT Hyderabad</strong>. I love teaching, hence I&rsquo;ve created this website to share that passion at no cost &#x1f4aa;</p>
 <table>
@@ -77,12 +77,12 @@
 </tr>
 </tbody>
 </table>
-<ul>
-<li><strong>Email</strong>: <a href="mailto:vineel.kovvuri@gmail.com">vineel.kovvuri@gmail.com</a></li>
-<li><strong>GitHub</strong>: <a href="https://www.github.com/vineelkovvuri">https://www.github.com/vineelkovvuri</a></li>
-<li><strong>YouTube</strong>: <a href="https://www.youtube.com/@vineelkovvuri">https://www.youtube.com/@vineelkovvuri</a></li>
-<li><strong>Discord</strong>: <a href="https://discord.gg/baDQSPpE">https://discord.gg/baDQSPpE</a></li>
-</ul>
+<hr>
+<p><a href="vineel.kovvuri@gmail.com"><img src="./images/gmail.png" style="max-width:40px;" alt="Github repo" /></a>    
+<a href="https://www.github.com/vineelkovvuri"><img src="./images/github.png" style="max-width:40px;" alt="Github repo" /></a>    
+<a href="https://www.youtube.com/@vineelkovvuri"><img src="./images/youtube.png" style="max-width:40px;" alt="Github repo" /></a>    
+<a href="https://discord.gg/baDQSPpE"><img src="./images/discord.png" style="max-width:40px;" alt="Github repo" /></a>    
+<a href="https://www.linkedin.com/in/vineelkovvuri"><img src="./images/linkedin.png" style="max-width:40px;" alt="Github repo" /></a>    </p>
 
 
 <hr>
