--- a/public/index.html
+++ b/public/index.html
@@ -78,11 +78,13 @@
 </tbody>
 </table>
 <hr>
-<p><a href="vineel.kovvuri@gmail.com"><img src="./images/gmail.png" style="max-width:40px;" alt="Github repo" /></a>    
-<a href="https://www.github.com/vineelkovvuri"><img src="./images/github.png" style="max-width:40px;" alt="Github repo" /></a>    
-<a href="https://www.youtube.com/@vineelkovvuri"><img src="./images/youtube.png" style="max-width:40px;" alt="Github repo" /></a>    
-<a href="https://discord.gg/baDQSPpE"><img src="./images/discord.png" style="max-width:40px;" alt="Github repo" /></a>    
-<a href="https://www.linkedin.com/in/vineelkovvuri"><img src="./images/linkedin.png" style="max-width:40px;" alt="Github repo" /></a>    </p>
+<div class="social">
+<a href="vineel.kovvuri@gmail.com"> <img src="./images/gmail.png" style="max-width:40px;" alt="Github repo" /> </a>
+<a href="https://www.github.com/vineelkovvuri"> <img src="./images/github.png" style="max-width:40px;" alt="Github repo" /> </a>
+<a href="https://www.youtube.com/@vineelkovvuri"> <img src="./images/youtube.png" style="max-width:40px;" alt="Github repo" /> </a>
+<a href="https://discord.gg/baDQSPpE"> <img src="./images/discord.png" style="max-width:40px;" alt="Github repo" /> </a>
+<a href="https://www.linkedin.com/in/vineelkovvuri"> <img src="./images/linkedin.png" style="max-width:40px;" alt="Github repo" /> </a>
+</div>
 
 
 <hr>
@@ -236,7 +238,7 @@ hljs.highlightAll();
 
   
   <hr/>
-  © <a href="https://vineelkovvuri.github.io">Vineel Kumar Reddy Kovvuri</a> 2017 &ndash; 2024 | <a href="https://github.com/vineelkovvuri">Github</a> | <a href="https://youtube.com/@vineelkovvuri">YouTube</a>
+  © <a href="https://vineelkovvuri.github.io">Vineel Kumar Reddy Kovvuri</a> 2017 &ndash; 2024
   
   </footer>
   </body>
