--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
 <p><a href="https://vineelkovvuri.github.com"><img src="./images/profile.jpg" style="max-width:15%;min-width:40px;float:right;" alt="Github repo" /></a></p>
 <h1 id="vineel-kovvuri">VINEEL KOVVURI</h1>
-<p><strong>Hi!</strong> I&rsquo;m <strong>Vineel Kovvuri</strong>, currently working as a Senior Software Engineer at <strong>Microsoft</strong> in Redmond, Washington. With around 13 years of experience, I graduated with a Master&rsquo;s degree from <strong>IIIT Hyderabad</strong>. I love teaching, hence I&rsquo;ve created this website to share that passion at no cost &#x1f4aa;</p>
+<p><strong>Hi!</strong> I&rsquo;m <strong>Vineel Kovvuri</strong>, currently working as a Senior Software Engineer at <strong>Microsoft</strong> in Redmond, Washington. With around 13 years of experience, I graduated with a Master&rsquo;s degree from <strong>IIIT Hyderabad</strong>. I love teaching, hence I&rsquo;ve created this website to share that passion for free &#x1f4aa;</p>
 <table>
 <thead>
 <tr>
