--- a/public/index.html
+++ b/public/index.html
@@ -51,31 +51,31 @@
 <td><a href="courses/c/"><strong>C</strong></a></td>
 <td></td>
 <td></td>
-<td><a href="https://meet.google.com/uob-kgdq-vde">https://meet.google.com/uob-kgdq-vde</a></td>
+<td><a href="https://meet.google.com/uob-kgdq-vde"><strong>Invite</strong></a></td>
 </tr>
 <tr>
 <td><a href="courses/java/"><strong>Java</strong></a></td>
 <td></td>
 <td></td>
-<td><a href="https://meet.google.com/spd-pnfs-hpy">https://meet.google.com/spd-pnfs-hpy</a></td>
+<td><a href="https://meet.google.com/spd-pnfs-hpy"><strong>Invite</strong></a></td>
 </tr>
 <tr>
 <td><a href="courses/python/"><strong>Python</strong></a></td>
 <td></td>
 <td></td>
-<td><a href="https://meet.google.com/ibo-ckah-mrm">https://meet.google.com/ibo-ckah-mrm</a></td>
+<td><a href="https://meet.google.com/ibo-ckah-mrm"><strong>Invite</strong></a></td>
 </tr>
 <tr>
 <td><a href="courses/linux/"><strong>Linux</strong></a></td>
 <td></td>
 <td></td>
-<td><a href="https://meet.google.com/gaz-ysbf-fen">https://meet.google.com/gaz-ysbf-fen</a></td>
+<td><a href="https://meet.google.com/gaz-ysbf-fen"><strong>Invite</strong></a></td>
 </tr>
 <tr>
 <td><a href="courses/linux/"><strong>Algorithms and Data Structures</strong></a></td>
 <td></td>
 <td></td>
-<td><a href="https://meet.google.com/gaz-ysbf-fen">https://meet.google.com/gaz-ysbf-fen</a></td>
+<td><a href="https://meet.google.com/gaz-ysbf-fen"><strong>Invite</strong></a></td>
 </tr>
 </tbody>
 </table>
