--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 <tbody>
 <tr>
 <td><a href="courses/c/"><strong>C</strong></a></td>
-<td></td>
+<td>10AM - 11:30AM</td>
 <td></td>
 <td><a href="https://meet.google.com/uob-kgdq-vde"><strong>Invite</strong></a></td>
 </tr>
@@ -72,7 +72,7 @@
 <td><a href="https://meet.google.com/gaz-ysbf-fen"><strong>Invite</strong></a></td>
 </tr>
 <tr>
-<td><a href="courses/linux/"><strong>Algorithms and Data Structures</strong></a></td>
+<td><a href="courses/algo/"><strong>Algorithms</strong></a></td>
 <td></td>
 <td></td>
 <td><a href="https://meet.google.com/gaz-ysbf-fen"><strong>Invite</strong></a></td>
@@ -222,9 +222,10 @@
 </ul>
   <footer>
   
-<script defer src="//yihui.org/js/center-img.js"></script>
+<script defer src="/js/center-img.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js" integrity="sha512-D9gUyxqja7hBtkWpPWGt9wfbfaMGVt9gnyCvYa+jojwwPHLCzUm5i8rpk7vD7wNee9bA35eYIjobYPaQuKS1MQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/highlightjs-line-numbers.js/2.8.0/highlightjs-line-numbers.min.js" integrity="sha512-axd5V66bnXpNVQzm1c7u1M614TVRXXtouyWCE+eMYl8ALK8ePJEs96Xtx7VVrPBc0UraCn63U1+ARFI3ofW+aA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/c.min.js" integrity="sha512-9Ge7wPRBM6DUCnE7Citv0pBWqt7hXeX2732053zamwp+11RX6HBQ7DdXRMNZM6VQmnwKXFKBLE7jS0dgWXUPnA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/python.min.js" integrity="sha512-wW8K3TEH5ZViD4aMPzwPdhXKs/Kb5MAm7qLRd3QliYlHy0u9utSKZsZzqlZAgJ9xxXp81acwnrZVZ8oTfoLG1g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/languages/x86asm.min.js" integrity="sha512-PsyL9V1oGfx9uQV60+pJM/GpWAefAPX7sdnE2rQ/jILKHxZCk2TPHMHLOSoihzaatNHpBzksS0EpMqnBXC7XGg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -233,9 +234,8 @@
 
 
 <script>
-
-
 hljs.highlightAll();
+hljs.initLineNumbersOnLoad();
 </script>
 
   
