--- a/public/index.html
+++ b/public/index.html
@@ -177,6 +177,11 @@
 <ul>
     
     <li>
+      <span class="date">2024/02/08</span>
+      <a href="https://youtube.com/watch?v=hOKuoczXEdk">Basic Text Editing Shortcuts</a>
+    </li>
+    
+    <li>
       <span class="date">2024/02/05</span>
       <a href="https://youtube.com/watch?v=dDpkT90g8qc">Windows or Linux కమాండ్స్ ని ఎలా use చేస్తాం?</a>
     </li>
