--- a/public/vlog/index.html
+++ b/public/vlog/index.html
@@ -38,6 +38,13 @@
 
 <main>
     
+    <span class="date">2024/02/08</span>
+    <a href="https://youtube.com/watch?v=hOKuoczXEdk">Basic Text Editing Shortcuts</a>
+    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+        <iframe src="https://www.youtube.com/embed/hOKuoczXEdk" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="Basic Text Editing Shortcuts"></iframe>
+    </div>
+    <br>
+    
     <span class="date">2024/02/05</span>
     <a href="https://youtube.com/watch?v=dDpkT90g8qc">Windows or Linux కమాండ్స్ ని ఎలా use చేస్తాం?</a>
     <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
