--- a/public/index.html
+++ b/public/index.html
@@ -177,6 +177,11 @@
 <ul>
     
     <li>
+      <span class="date">2024/02/15</span>
+      <a href="https://youtube.com/watch?v=l__KWxDMqQw">What is a Hard Disk?</a>
+    </li>
+    
+    <li>
       <span class="date">2024/02/08</span>
       <a href="https://youtube.com/watch?v=hOKuoczXEdk">Basic Text Editing Shortcuts</a>
     </li>
