--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 <tbody>
 <tr>
 <td><a href="courses/c/"><strong>C</strong></a></td>
-<td>10AM - 11:30AM</td>
+<td></td>
 <td></td>
 <td><a href="https://meet.google.com/uob-kgdq-vde"><strong>Invite</strong></a></td>
 </tr>
@@ -175,6 +175,11 @@
 <h1>Vlog</h1>
 
 <ul>
+    
+    <li>
+      <span class="date">2024/02/24</span>
+      <a href="https://youtube.com/watch?v=NOJ5mjf08rE">The ultimate file searching tool for Windows - &lsquo;Everything&rsquo;</a>
+    </li>
     
     <li>
       <span class="date">2024/02/15</span>
