--- a/public/vlog/index.html
+++ b/public/vlog/index.html
@@ -38,6 +38,13 @@
 
 <main>
     
+    <span class="date">2024/02/24</span>
+    <a href="https://youtube.com/watch?v=NOJ5mjf08rE">The ultimate file searching tool for Windows - &lsquo;Everything&rsquo;</a>
+    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+        <iframe src="https://www.youtube.com/embed/NOJ5mjf08rE" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="The ultimate file searching tool for Windows - &#39;Everything&#39;"></iframe>
+    </div>
+    <br>
+    
     <span class="date">2024/02/15</span>
     <a href="https://youtube.com/watch?v=l__KWxDMqQw">What is a Hard Disk?</a>
     <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
