Increase width to 960px
Signed-off-by: Vineel Kovvuri <vineel.kovvuri@gmail.com>

--- a/content/tools/pagetablecalculator/index.html
+++ b/content/tools/pagetablecalculator/index.html
@@ -1,4 +1,9 @@
-<!DOCTYPE html>
+---
+title: "PageTableCalculator - Calculate x64 Page table entries"
+tags: ['Tools']
+---
+
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -41,17 +46,16 @@
             box-sizing: border-box;
         }
     </style>
-</head>
+</head> -->
+
 
 <body>
-    <h2>PageTableCalculator - Calculate x64 Page table entries required for a given memory range</h2>
     <div class="container">
         <div class="input-group">
             <label for="tbMemHex">Mem:</label>
             <input type="text" id="tbMemHex" value="0x0">
             <pre id="tbMemResults"></pre>
         </div>
-        <hr>
         <div class="input-group">
             <label for="tbFromHex">From:</label>
             <input type="text" id="tbFromHex" value="0x0">
@@ -439,5 +443,5 @@ X64 - 4K 5 Level Paging
         document.getElementById('unit').addEventListener('change', calculateResult);
     </script>
 </body>
-
-</html>
+<!-- 
+</html> -->
